e400: Fixup layouts and media
* Compensate for ICS LDPI brokenness
* Add a working camera implementation
* Other minor cleanups

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -86,4 +86,7 @@
     <!-- Menu+Home+Back -->
     <integer name="config_deviceHardwareKeys">7</integer>
 
+    <!-- Boolean indicating if current platform supports quick switch-on/off of
+                           Bluetooth Module -->
+    <bool name="config_bluetooth_adapter_quick_switch">false</bool>
 </resources>
